--- a/index.html
+++ b/index.html
@@ -1,14 +1,110 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pre-Entrega 2 JS</title>
+    <meta name="description" content="Página oficial de Munay. Productos artesanales">
+    <meta name="keywords" content="mate artesanal microemprendimiento tucuman argentina ">
+    <link rel="shortcut icon" href="./assets/img/icono1.ico">
+    <title>Munay</title>
+    <!--link google fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Clicker+Script&family=Raleway:ital,wght@0,300;0,400;0,700;1,400;1,700&display=swap"
+        rel="stylesheet">
+    <!--wow js-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <!--link css-->
+    <link rel="stylesheet" href="./scss/style.css">
+    <!-- logica js-->
+    <script defer src="./js/login.js"></script>
 </head>
-<body>
-    <h1><span>Pre-entrega 2 - María Jimena Martínez</span></h1>
 
-    <script src="./js/main.js"></script>
+<body>
+    <div class="estructuraIndex">
+        <header>
+            <div>
+                <a href="./index.html"><img src="./assets/img/munayTerracota.png" alt="logo munay"></a>
+            </div>
+            <!--codigo para menu hamburguesa-->
+            <input type="checkbox" id="menuCheck">
+            <label id="menu" for="menuCheck">
+                <span id="menuAbrir">&#9776;</span>
+                <span id="menuCerrar">X</span>
+            </label>
+            <nav>
+                <ul>
+                    <li><a href="./index.html">Inicio</a></li>
+                    <li><a href="./pages/productos.html">Productos</a></li>
+                    <li><a href="./pages/conocenos.html">Conocenos</a></li>
+                    <li><a href="./pages/sabias.html">Sabías...?</a></li>
+                    <li><a href="./pages/contactame.html">Contáctame</a></li>
+                </ul>
+            </nav>
+        </header>
+        <main class="mainIndex">
+            <div class="bienvenidos">
+                <h1 class="wow animate__animated animate__fadeInLeft">Bienvenidos a Munay</h1>
+                <h2>PRODUCTOS HECHOS CON AMOR</h2>
+                <div class="btnPedidos">
+                    <button><a href="./pages/contactame.html#pedidos">Pedidos</a></button>
+                </div>
+            </div>
+            <div class="formulario" id="acceso">
+                <h2>Accede a tu cuenta</h2>
+                <section>
+                    <!--formulario de acceso-->
+                    <div>
+                        <form action="#" autocomplete="off">
+                            <div>
+                                <input type="email" name="Email" placeholder="Email" class="campo" id="emailLogin">
+                            </div>
+                            <div>
+                                <input type="password" placeholder="Contraseña" class="campo" id="passLogin">
+                            </div>
+                            <div>
+                                <span><input type="checkbox" value="recuerdame" id="remember" alt="enviar formulario" />
+                                    Recuérdame</span>
+                            </div>
+                            <div>
+                                <input type="submit" value="Ingresar" id="btnLogin" alt="iniciar sesion" />
+                            </div>
+                            <p id="notfound"></p>
+                            <p>Si todavía no te has registrado <a href="./pages/registro.html">click aquí</a></p>
+                        </form>
+                    </div>
+                </section>
+            </div>
+        </main>
+        <footer class="footerIndex">
+            <div>
+                <p>· Munay ·</p>
+                <p>Productos hechos con amor</p>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="./index.html">Inicio</a></li>
+                    <li><a href="./pages/conocenos.html">Conocenos</a></li>
+                    <li><a href="./pages/sabias.html">Sabías...?</a></li>
+                    <li><a href="./pages/productos.html">Productos</a></li>
+                    <li><a href="./pages/contactame.html">Contáctame</a></li>
+                </ul>
+            </nav>
+            <div>
+                <p>Tucumán - Argentina</p>
+                <p>©Munay. Todos los derechos reservados</p>
+            </div>
+        </footer>
+    </div>
+
+    <!--wow js-->
+    <script src="js/wow.min.js"></script>
+    <script>
+        new WOW().init();
+    </script>
 </body>
+
 </html>
