--- a/pages/productos.html
+++ b/pages/productos.html
@@ -17,6 +17,8 @@
         rel="stylesheet">
     <!--link css-->
     <link rel="stylesheet" href="../scss/style.css">
+    <!-- logica js -->
+    <script defer src="../js/pedidos.js"></script>
 </head>
 
 <body>
@@ -44,68 +46,16 @@
         <main>
             <h1>Mates y cuencos de madera</h1>
             <Section class="mates">
-                <h2>Mates</h2>
+                <h2>Mates y cuencos</h2>
                 <!--cards de productos-->
                 <div class="boxMates">
-                    <div class="cardMates">
-                        <img src="../assets/img/mate1-kuychi.jpg" alt="mate pintado con varios colores">
-                        <h3>Mate K'uychi</h3>
-                        <p>K'uychi = Arco iris</p>
-                        <p>Mate de madera pintado a mano con colores vivos con pinceladas libres.</p>
-                    </div>
-                    <div class="cardMates">
-                        <img src="../assets/img/mate2-pullullu.jpg" alt="mate pintado a lunares">
-                        <h3>Mate Pullullu</h3>
-                        <p>Pullullu = Burbuja</p>
-                        <p>Mate de madera pintado a mano con lunares grandes sobre un fondo de color lila.</p>
-                    </div>
-                    <div class="cardMates">
-                        <img src="../assets/img/mate3-nuna.jpg" alt="mate pintado en varios tonos naranjas">
-                        <h3>Mate Nuna</h3>
-                        <p>Nuna = Alma</p>
-                        <p>Mate de madera pintado a mano en degrade naranja.</p>
-                    </div>
-                    <div class="cardMates">
-                        <img src="../assets/img/mate4-kulli.jpg" alt="mate pintado de color lila">
-                        <h3>Mate Kulli</h3>
-                        <p>Kulli = Morado</p>
-                        <p>Mate de madera pintado a mano de color lila </p>
-                    </div>
-                    <div class="cardMates">
-                        <img src="../assets/img/mate5-inti.jpg" alt="mate pintado de color amarillo">
-                        <h3>Mate Inti</h3>
-                        <p>Inti = Sol</p>
-                        <p>Mate de madera pintado a mano de color amarillo con fanja de madera a la vista </p>
-                    </div>
-                    <div class="cardMates">
-                        <img src="../assets/img/mate6-kallpa.jpg" alt="mate pintado con varios colores tonos oscuros">
-                        <h3>Mate Kallpa</h3>
-                        <p>Kallpa = Fuerza</p>
-                        <p>Mate de madera pintado a mano en tonos oscuros, pinceladas libres.</p>
-                    </div>
-                    <div class="cardMates">
-                        <img src="../assets/img/mate7-thiti.jpg" alt="mate pintado con tres colores">
-                        <h3>Mate Thiti</h3>
-                        <p>Thiti = Sonrisa</p>
-                        <p>Mate de madera pintado a mano con tres franjas iregulares naranja, amarillo y lila</p>
-                    </div>
-                    <div class="cardMates">
-                        <img src="../assets/img/mate8-kusiy.jpeg" alt="mate pintado con colores pasteles">
-                        <h3>Mate Kusiy</h3>
-                        <p>Kusiy = Alegría</p>
-                        <p>Mate de madera pintado a mano con pinceladas libres en tonos pasteles.</p>
-                    </div>
+                    <!-- Contenedor dinámico -->
                 </div>
             </Section>
             <section class="cuencos">
                 <h2>Cuencos</h2>
-                <div class=" boxCuencos">
-                    <div class="cardCuencos">
-                        <img src="../assets/img/cuencos.jpg" alt="cuencos de madera">
-                        <h3>Cuencos Awki</h3>
-                        <p>Awki = Abuelo</p>
-                        <p>Set de cuencos de madera tres tamaños diferentes barnizados. </p>
-                    </div>
+                <div class="boxCuencos">
+                    <!-- Contenedor dinámico -->
                 </div>
             </Section>
         </main>
