se agrega logica js, css y modifica html

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -52,12 +52,12 @@
                     <!-- Contenedor dinámico -->
                 </div>
             </Section>
-            <section class="cuencos">
+            <!-- <section class="cuencos">
                 <h2>Cuencos</h2>
                 <div class="boxCuencos">
-                    <!-- Contenedor dinámico -->
+                    Contenedor dinámico 
                 </div>
-            </Section>
+            </Section> -->
         </main>
         <footer>
             <div>
