--- a/pages/registro.html
+++ b/pages/registro.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-    <div class="estructuraContactame">
+    <div class="estructuraRegistro">
         <header>
             <div>
                 <a href="../index.html"><img src="../assets/img/munayTerracota.png" alt="logo munay"></a>
@@ -43,7 +43,7 @@
                 </ul>
             </nav>
         </header>
-        <main>
+        <main class="registro">
             <h2>¡Registrate!</h2>
             <section>
                 <!--formulario de registro-->
@@ -74,6 +74,10 @@
                         <input type="submit" value="Registrarme" id="btnRegistro" alt="registrarme" />
                         <p>Para iniciar sesión <a href="../index.html">click aquí</a></p>
                     </form>
+                </div>
+                <div class="beneficios">
+                    <p id="exitoso"></p>
+                    <p>Recuerda que al registrarte puedes acceder a sorteos y beneficios exclusivos que iremos comunicando por las redes sociales</p>
                 </div>
             </section>
         </main>
