--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <!--link css-->
     <link rel="stylesheet" href="./scss/style.css">
     <!-- logica js-->
+    <script defer src="./js/registro.js"></script>
     <script defer src="./js/login.js"></script>
-    
 </head>
 
 <body>
@@ -66,10 +66,10 @@
                             <div>
                                 <input type="password" placeholder="Contraseña" class="campo" id="passLogin">
                             </div>
-                            <div>
+                            <!-- <div>
                                 <span><input type="checkbox" value="recuerdame" id="remember" alt="enviar formulario" />
                                     Recuérdame</span>
-                            </div>
+                            </div> -->
                             <div>
                                 <input type="submit" value="Ingresar" id="btnLogin" alt="iniciar sesion" />
                             </div>
