actualización de proyecto con tienda online terminada sin fetch

--- a/pages/contactame.html
+++ b/pages/contactame.html
@@ -51,12 +51,12 @@
                 <div class="izquierda">
                     <div class="pedidos" id="pedidos">
                         <h3>Pedidos</h3>
-                        <p>Para realizar tu pedido puedes ponerte en contacto conmigo por email (llenando el formulario
+                        <p>Para realizar pedido de un mate personalizado podes ponerte en contacto conmigo por email (llenando el formulario
                             de la derecha), por MD de Instagram o por Whatsapp.
                         </p>
                         <p>Es muy importante que al momento de realizar el pedido recuerdes que cada modelo es único e
-                            irrepetible en cuanto a diseño. Consulta el stock disponible, en caso de no tener el que
-                            buscas puedo hacerte uno personalizado.</p>
+                            irrepetible en cuanto a diseño (podés usar los de la tienda como referencia).</p>
+                        <p>Para acceder a la tienda debes registrarte e iniciar sesión. Ahí podés consultar el stock disponible</p>
                     </div>
                     <div class="redes">
                         <h3>Redes:</h3>
