--- a/pages/productos.html
+++ b/pages/productos.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Mates de madera pintados a mano">
-    <meta name="keywords" content="compra mate pintados diseño unicos microemprendimiento tucuman argentina regalo">
+    <meta name="keywords" content="mate pintados diseño unicos microemprendimiento tucuman argentina regalo">
     <link rel="shortcut icon" href="../assets/img/icono1.ico">
     <title>Munay - Productos</title>
     <!--link google fonts-->
@@ -17,8 +17,6 @@
         rel="stylesheet">
     <!--link css-->
     <link rel="stylesheet" href="../scss/style.css">
-    <!-- logica js -->
-    <script defer src="../js/pedidos.js"></script>
 </head>
 
 <body>
@@ -46,18 +44,70 @@
         <main>
             <h1>Mates y cuencos de madera</h1>
             <Section class="mates">
-                <h2>Mates y cuencos</h2>
+                <h2>Mates</h2>
                 <!--cards de productos-->
                 <div class="boxMates">
-                    <!-- Contenedor dinámico -->
+                    <div class="cardMates">
+                        <img src="../assets/img/mate1-Kuychi.jpg" alt="mate pintado con varios colores">
+                        <h3>Mate K'uychi</h3>
+                        <p>K'uychi = Arco iris</p>
+                        <p>Mate de madera pintado a mano con colores vivos con pinceladas libres.</p>
+                    </div>
+                    <div class="cardMates">
+                        <img src="../assets/img/mate2-Pullullu.jpg" alt="mate pintado a lunares">
+                        <h3>Mate Pullullu</h3>
+                        <p>Pullullu = Burbuja</p>
+                        <p>Mate de madera pintado a mano con lunares grandes sobre un fondo de color lila.</p>
+                    </div>
+                    <div class="cardMates">
+                        <img src="../assets/img/mate3-Nuna.jpg" alt="mate pintado en varios tonos naranjas">
+                        <h3>Mate Nuna</h3>
+                        <p>Nuna = Alma</p>
+                        <p>Mate de madera pintado a mano en degrade naranja.</p>
+                    </div>
+                    <div class="cardMates">
+                        <img src="../assets/img/mate4-Kulli.jpg" alt="mate pintado de color lila">
+                        <h3>Mate Kulli</h3>
+                        <p>Kulli = Morado</p>
+                        <p>Mate de madera pintado a mano de color lila </p>
+                    </div>
+                    <div class="cardMates">
+                        <img src="../assets/img/mate5-Inti.jpg" alt="mate pintado de color amarillo">
+                        <h3>Mate Inti</h3>
+                        <p>Inti = Sol</p>
+                        <p>Mate de madera pintado a mano de color amarillo con fanja de madera a la vista </p>
+                    </div>
+                    <div class="cardMates">
+                        <img src="../assets/img/mate6-Kallpa.jpg" alt="mate pintado con varios colores tonos oscuros">
+                        <h3>Mate Kallpa</h3>
+                        <p>Kallpa = Fuerza</p>
+                        <p>Mate de madera pintado a mano en tonos oscuros, pinceladas libres.</p>
+                    </div>
+                    <div class="cardMates">
+                        <img src="../assets/img/mate7-Thiti.jpg" alt="mate pintado con tres colores">
+                        <h3>Mate Thiti</h3>
+                        <p>Thiti = Sonrisa</p>
+                        <p>Mate de madera pintado a mano con tres franjas iregulares naranja, amarillo y lila</p>
+                    </div>
+                    <div class="cardMates">
+                        <img src="../assets/img/mate8-Kusiy.jpeg" alt="mate pintado con colores pasteles">
+                        <h3>Mate Kusiy</h3>
+                        <p>Kusiy = Alegría</p>
+                        <p>Mate de madera pintado a mano con pinceladas libres en tonos pasteles.</p>
+                    </div>
                 </div>
             </Section>
-            <!-- <section class="cuencos">
+            <section class="cuencos">
                 <h2>Cuencos</h2>
-                <div class="boxCuencos">
-                    Contenedor dinámico 
+                <div class=" boxCuencos">
+                    <div class="cardCuencos">
+                        <img src="../assets/img/cuencos.jpg" alt="cuencos de madera">
+                        <h3>Cuencos Awki</h3>
+                        <p>Awki = Abuelo</p>
+                        <p>Set de cuencos de madera tres tamaños diferentes barnizados. </p>
+                    </div>
                 </div>
-            </Section> -->
+            </Section>
         </main>
         <footer>
             <div>
