--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -5,24 +5,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Página de Registro">
-    <meta name="keywords" content="login inicio sesion Munay microemprendimiento tucuman argentina ">
+    <meta name="description" content="Mates de madera pintados a mano">
+    <meta name="keywords" content="compra mate pintados diseño unicos microemprendimiento tucuman argentina regalo">
     <link rel="shortcut icon" href="../assets/img/icono1.ico">
-    <title>Munay - Inicia Sesión</title>
+    <title>Munay - Tienda Online</title>
     <!--link google fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Clicker+Script&family=Raleway:ital,wght@0,300;0,400;0,700;1,400;1,700&display=swap"
         rel="stylesheet">
+    <!--font awesome-->
+    <script src="https://kit.fontawesome.com/a442110d02.js" crossorigin="anonymous"></script>
     <!--link css-->
     <link rel="stylesheet" href="../scss/style.css">
-    <!--logica js-->
-    <script defer src="../js/registro.js"></script>
+    <!-- mi logica js -->
+    <script defer src="../js/tienda.js"></script>
 </head>
 
 <body>
-    <div class="estructuraContactame">
+    <div class="estructuraProductos">
         <header>
             <div>
                 <a href="../index.html"><img src="../assets/img/munayTerracota.png" alt="logo munay"></a>
@@ -34,6 +36,14 @@
                 <span id="menuCerrar">X</span>
             </label>
             <nav>
+                <ul id="shop">
+                    <li>
+                        <label for="store">
+                            <span id="open-closeModal"><i class="fa-solid fa-3x fa-store" id="storeIco"></i><span
+                                    id="cantidadCarrito"></span></span>
+                        </label>
+                    </li>
+                </ul>
                 <ul>
                     <li><a href="../index.html">Inicio</a></li>
                     <li><a href="./productos.html">Productos</a></li>
@@ -44,23 +54,32 @@
             </nav>
         </header>
         <main>
-            <h2>Accede a tu cuenta</h2>
-            <section>
-                <!--formulario de acceso-->
-                <div>
-                    <form action="#" autocomplete="off">
-                        
-                        <div>
-                            <input type="email" name="Email" placeholder="Email" class="campo" id="campoEmail">
-                        </div>
-                        <div>
-                            <input type="text" placeholder="Contraseña" class="campo" id="campoPass">
-                        </div>
-                        <span><input type="checkbox"  value="recuerdame" id="remember" alt="enviar formulario" /> Recuérdame</span>
-                        <input type="submit" value="Ingresar" id="btnLogin" alt="iniciar sesion" />
-                    </form>
+            <h1>Tienda online</h1>
+            <Section class="mates">
+                <h2>Mates y cuencos en stock:</h2>
+                <!--cards de productos-->
+                <div class="boxMates">
+                    <!-- Contenedor dinámico -->
                 </div>
-            </section>
+            </Section>
+            <!-- Modal -->
+            <div class="boxModal">
+                <input type="checkbox" id="store">
+                <div class="contentModal">
+                    <h3>Seleccionaste:</h3>
+                    <div class="modalBody">
+                        <!-- Contenido dinámico -->
+                    </div>
+                        <div>
+                            <p id="precioTotal"></p>
+                        </div>
+                        <div class="botonesModal">
+                            <button id="vaciarCarrito">Vaciar carrito</button>
+                            <button id="finCompra">Finalizar compra</button>
+                        </div> 
+                    
+                </div>
+            </div>
         </main>
         <footer>
             <div>
@@ -82,6 +101,8 @@
             </div>
         </footer>
     </div>
+    <!-- SweetAlert -->
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 
 </html>
