actualización con logica js terminada

--- a/index.html
+++ b/index.html
@@ -51,7 +51,10 @@
                 <h1 class="wow animate__animated animate__fadeInLeft">Bienvenidos a Munay</h1>
                 <h2>PRODUCTOS HECHOS CON AMOR</h2>
                 <div class="btnPedidos">
-                    <button><a href="./pages/contactame.html#pedidos">Pedidos</a></button>
+                    <button><a href="./pages/registro.html">¡Registrate!</a></button>
+                </div>
+                <div>
+                    <h2>Para acceder a la tienda online</h2>
                 </div>
             </div>
             <div class="formulario" id="acceso">
@@ -66,10 +69,6 @@
                             <div>
                                 <input type="password" placeholder="Contraseña" class="campo" id="passLogin">
                             </div>
-                            <!-- <div>
-                                <span><input type="checkbox" value="recuerdame" id="remember" alt="enviar formulario" />
-                                    Recuérdame</span>
-                            </div> -->
                             <div>
                                 <input type="submit" value="Ingresar" id="btnLogin" alt="iniciar sesion" />
                             </div>
