--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -15,6 +15,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Clicker+Script&family=Raleway:ital,wght@0,300;0,400;0,700;1,400;1,700&display=swap"
         rel="stylesheet">
+    <!-- Toastify -->
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <!--font awesome-->
     <script src="https://kit.fontawesome.com/a442110d02.js" crossorigin="anonymous"></script>
     <!--link css-->
@@ -103,6 +105,8 @@
     </div>
     <!-- SweetAlert -->
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <!-- Toastify -->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 </body>
 
 </html>
